Ensure explore arrows are visible by fixing overflow

--- a/css/style.css
+++ b/css/style.css
@@ -2089,6 +2089,7 @@ img {
 
 .explore-row-wrapper {
   position: relative;
+  overflow: visible;
 }
 
 .explore-cards {
